hphp/test/zend/bad/ext/standard/tests/general_functions/var_export_error3.php
<?php
/* Prototype  : mixed var_export(mixed var [, bool return])
 * Description: Outputs or returns a string representation of a variable 
 * Source code: ext/standard/var.c
 * Alias to functions: 
 */

$a[] =& $a;
var_export($a, true);

?>
===DONE===